# bitfield-io

./: CHANGELOG  Makefile.in  README  README.md  TODO  bitfield-io.c  bitfield-io.h  config.h  configure  configure.ac
man/: Makefile.in  bfwrite.3
tests/: Makefile.in  test1.c
